force-app/main/default/objects/User/fields/bio__c.field-meta.xml
<CustomField>
    <fullName>bio__c</fullName>
    <label>Biography ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>