force-app/main/default/objects/User/fields/Biography__c.field-meta.xml
<CustomField>
    <fullName>Biography__c</fullName>
    <label>Biography</label>
    <length>130768</length>
    <type>LongTextArea</type>
</CustomField>