force-app/main/default/objects/User/fields/Gross_Profit_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit_Percentage__c</fullName>
    <formula>if(Sale_MPV__c&gt;5.09,0,if(Sale_MPV__c&gt;4.01,0.40,if(Sale_MPV__c&gt;3.01,0.45,if(Sale_MPV__c&gt;1.00,0.50,0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Profit %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>