force-app/main/default/objects/User/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <formula>IF( 
CONTAINS(Profile.Name,&quot;Solar&quot;),&quot;Solar&quot;, 
IF( 
CONTAINS(Profile.Name,&quot;Water&quot;),&quot;Water&quot;, 
IF( 
CONTAINS(Profile.Name,&quot;Window&quot;),&quot;Window&quot;, 
IF( 
CONTAINS(Profile.Name,&quot;Automation&quot;), &quot;Home Automation&quot;, 
IF( 
CONTAINS(Profile.Name,&quot;Pest&quot;), &quot;Pest Control&quot;,&quot;&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry</label>
    <type>Text</type>
</CustomField>