force-app/main/default/objects/User/fields/Installation_Slack_Channel__c.field-meta.xml
<CustomField>
    <fullName>Installation_Slack_Channel__c</fullName>
    <label>Installation Slack Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>