force-app/main/default/objects/User/fields/Intacct_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Intacct_Company_ID__c</fullName>
    <label>Intacct Company ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>