force-app/main/default/objects/User/fields/Intacct_Login_ID__c.field-meta.xml
<CustomField>
    <fullName>Intacct_Login_ID__c</fullName>
    <label>Intacct Login ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>