force-app/main/default/objects/User/fields/Intacct_User_Key__c.field-meta.xml
<CustomField>
    <fullName>Intacct_User_Key__c</fullName>
    <label>Intacct User Key</label>
    <length>40</length>
    <type>Text</type>
</CustomField>