force-app/main/default/objects/User/fields/maps__DeviceId__c.field-meta.xml
<CustomField>
    <fullName>maps__DeviceId__c</fullName>
    <formula>&quot;MALiveAvail-&quot; &amp; LEFT($Organization.Id, 15) &amp; &quot;-&quot; &amp; LEFT(Id, 15)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Device Id</label>
    <type>Text</type>
</CustomField>