force-app/main/default/objects/User/fields/NuHome_domain__c.field-meta.xml
<CustomField>
    <fullName>NuHome_domain__c</fullName>
    <formula>CONTAINS(&quot;nuhome.com&quot;, Username)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NuHome domain</label>
    <type>Checkbox</type>
</CustomField>