force-app/main/default/objects/User/fields/NuHomePromotions_domain__c.field-meta.xml
<CustomField>
    <fullName>NuHomePromotions_domain__c</fullName>
    <formula>CONTAINS(&quot;nuhomepromotions&quot;, Username)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NuHomePromotions domain</label>
    <type>Checkbox</type>
</CustomField>