force-app/main/default/objects/User/fields/Personnel__c.field-meta.xml
<CustomField>
    <fullName>Personnel__c</fullName>
    <label>Personnel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>