force-app/main/default/objects/User/fields/Sale_MPV__c.field-meta.xml
<CustomField>
    <fullName>Sale_MPV__c</fullName>
    <description>Total Of Event  /  Event Sales Approved</description>
    <formula>if(Event_Sales_Approved__c!=0,Total_Of_Event__c /  Event_Sales_Approved__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sale MPV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>