force-app/main/default/objects/User/fields/Service_Slack_Channel__c.field-meta.xml
<CustomField>
    <fullName>Service_Slack_Channel__c</fullName>
    <label>Service Slack Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>