force-app/main/default/objects/User/fields/Slack_Channel__c.field-meta.xml
<CustomField>
    <fullName>Slack_Channel__c</fullName>
    <label>Slack Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>