force-app/main/default/objects/User/fields/Stride_Room__c.field-meta.xml
<CustomField>
    <fullName>Stride_Room__c</fullName>
    <label>Stride Room</label>
    <length>255</length>
    <type>Text</type>
</CustomField>